--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="11.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Books\Books.csproj" />
+    </ItemGroup>
+
 </Project>
