--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,14 +14,8 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
-    projects: '$(solution)'
-    arguments: '--configuration $(buildConfiguration) --output $(build.artifactstagingdirectory)'
+    projects: '$**/BlazorWebApp/BlazorWebApp.csproj'
+    arguments: '--configuration $(buildConfiguration)'
