--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,11 @@ steps:
     command: 'build'
     projects: '**/BlazorWebApp.csproj'
     arguments: '--configuration $(buildConfiguration)'
+
+-  task: DotNetCoreCLI@2
+   displayName: 'Publishing App...'
+   inputs:
+      command: 'publish'
+      publishWebProjects: true
+      arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: false
