--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,11 +17,12 @@ steps:
 - task: NuGetToolInstaller@1
   inputs:
     versionSpec: '5.x'
-- task: DotNetCoreCLI@2
+
+- task: NuGetCommand@2
   inputs:
-    command: 'build'
-    projects: '**/BlazorWebApp.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
 
 -  task: DotNetCoreCLI@2
    displayName: 'Publishing App...'
