--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,6 @@ steps:
       projects: 'BlazorWebApp.csproj'
       arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
       zipAfterPublish: false
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publishing Build Artifacts...'
