--- a/BlazorWebApp/BlazorWebApp.csproj
+++ b/BlazorWebApp/BlazorWebApp.csproj
@@ -20,4 +20,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Controls\OrderedList.razor" />
+    </ItemGroup>
+
 </Project>
