--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Application\Application.csproj" />
-      <ProjectReference Include="..\Books\Books.csproj" />
+      <ProjectReference Include="..\MyBookshelf\MyBookshelf.csproj" />
     </ItemGroup>
 
     <ItemGroup>
