--- a/BlazorWebApp/BlazorWebApp.csproj
+++ b/BlazorWebApp/BlazorWebApp.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
+        <PackageReference Include="MudBlazor" Version="6.1.3-dev.1" />
     </ItemGroup>
 
     <ItemGroup>
